--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 #Follow these 2 steps to set up your site.
 
 #Step 1: give your study group a name and a short description:
-title: Our Study Group
-description: "A study group."
+title: scienceLab
+description: "Open science for Minnesota."
 
 #Step 2: press the green 'Commit Changes' button at the bottom of this page.
 
@@ -17,7 +17,7 @@ description: "A study group."
 # None of these things need to be changed - but feel free!
 
 titleBackground: "https://s3-us-west-2.amazonaws.com/webmaker-kits/learning%402x.jpg"
-headlineSmall: "Welcome To Our Study Group!"
+headlineSmall: "Welcome to the Open Science Lab!"
 headlineMain: "Let's Work Together"
 
 
