--- a/_data/members.yml
+++ b/_data/members.yml
@@ -4,3 +4,12 @@
   interests:
     - Programming
     - Open Science
+
+
+- name: Dorian Kvale
+  affiliation: MPCA
+  github: dKvale
+  interests:
+    - R-Stats
+    - Open Science
+    - Air Modeling
